--- a/assets/themes/leo/dyslexic/theme.css
+++ b/assets/themes/leo/dyslexic/theme.css
@@ -7148,6 +7148,7 @@ i.help-large::before,
 i.type.help::before,
 i.help::before {
   content: '\e835';
+  cursor: pointer;
 }
 i.disconnect-large,
 i.disconnect.cas,
@@ -7161,6 +7162,10 @@ i.disconnect-large::before,
 i.type.disconnect::before,
 i.disconnect::before {
   content: '\e842';
+}
+/* no ico in app page title*/
+h1 i:before {
+  display: none;
 }
 /* nav horiz menu icons */
 nav.horizontal {
